--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+/* Dark Blue (Dark Mode Elements): hsl(209, 23%, 22%)
+- Very Dark Blue (Dark Mode Background): hsl(207, 26%, 17%)
+- Very Dark Blue (Light Mode Text): hsl(200, 15%, 8%)
+- Dark Gray (Light Mode Input): hsl(0, 0%, 52%)
+- Very Light Gray (Light Mode Background): hsl(0, 0%, 98%)
+- White (Dark Mode Text & Light Mode Elements): hsl(0, 0%, 100%) */
+
+:root {
+  --darkElements: hsl(209, 23%, 22%);
+  --darkBackground: hsl(207, 26%, 17%);
+  --lightElements: hsl(200, 15%, 8%);
+  --lightText: hsl(200, 15%, 8%);
+  --lightBackground: hsl(0, 0%, 98%);
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,11 +26,22 @@ body {
   padding: 0;
   background-color: aqua;
   font-size: 16px;
+  color: var(--lightText);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.spinner {
+  display: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0 ;
+  right: 0;
+  margin: auto;
+  background: crimson;
 }
 
 h1, h2, h3, h4, p {
@@ -38,40 +65,100 @@ h2 {
   font-size: 14px;
 }
 .App {
-  background-color: aliceblue;
   min-height: 100vh;
-  background-color: hsl(0, 0%, 98%);
+  background-color: var(--lightBackground);
 }
 main {
   flex-direction: row;
-  padding: 5vmin;
+  /* padding: 5vmin; */
+  /* background: antiquewhite; */
   display: flex;
-  justify-content: flex-start;
-  /* align-items: flex-start; */
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  /* gap: 20px; */
   flex-wrap: wrap;
 }
+
 .Header {
   height: 10vh;
-  background: white;
+  /* background: white; */
   justify-content: space-between;
   padding: 0 5vw 0 5vw;
-  box-shadow: -4px 11px 13px -11px rgba(0,0,0,0.75);
-  -webkit-box-shadow: -4px 11px 13px -11px rgba(0,0,0,0.75);
-  -moz-box-shadow: -4px 11px 13px -11px rgba(0,0,0,0.75);
+  box-shadow: -4px 11px 13px -11px rgba(156, 149, 149, 0.75);
+  -webkit-box-shadow: -4px 11px 13px -11px rgba(160, 155, 155, 0.75);
+  -moz-box-shadow: -4px 11px 13px -11px rgba(173, 169, 169, 0.75);
+}
+.filters {
+  display: flex;
+  margin: 20px 0 10px 0;
+  /* background: antiquewhite; */
+  justify-content: space-between;
+  padding: 0 10vmin 0 10vmin;
+  height: 40px;
 }
 
+.filters * {
+  /* background: aqua; */
+  border: none;
+  outline: none;
+  height: 40px;
+  border-radius: 5px;
+  box-shadow: -1px 2px 9px 1px rgba(175, 172, 172, 0.75);
+  -webkit-box-shadow: -1px 2px 9px 1px rgba(182, 180, 180, 0.75);
+  -moz-box-shadow: -1px 2px 9px 1px rgba(172, 170, 170, 0.75);
+}
+.search {
+  width: 30vw;
+}
+select {
+  width: 15vw;
+}
 .Card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 15vw;
   height: 250px;
+  margin: 20px;
   background: white;
-  border-radius: 8px;
-  box-shadow: -4px 11px 13px -11px rgba(0,0,0,0.75);
-  -webkit-box-shadow: -4px 11px 13px -11px rgba(0,0,0,0.75);
-  -moz-box-shadow: -4px 11px 13px -11px rgba(0,0,0,0.75);
+  border-radius: 6px;
+  transition: 0.1s;
+  box-shadow: -1px 2px 9px 1px rgba(136, 134, 134, 0.75);
+-webkit-box-shadow: -1px 2px 9px 1px rgba(151, 148, 148, 0.75);
+-moz-box-shadow: -1px 2px 9px 1px rgba(121, 120, 120, 0.75);
+animation: myAnim 1s ease 0s 1 normal forwards;
+}
+.Card:active {
+  animation: myAnimOut 1s ease 0s 1 normal forwards;
+}
+@keyframes myAnim {
+	0% {
+		opacity: 0;
+		transform: rotateX(-100deg);
+		transform-origin: top;
+	}
+
+	100% {
+		opacity: 1;
+		transform: rotateX(0deg);
+		transform-origin: top;
+	}
+}
+@keyframes myAnimOut {
+	0% {
+		opacity: 1;
+		transform: rotateX(0deg);
+		transform-origin: top;
+	}
+
+	100% {
+		opacity: 0;
+		transform: rotateX(70deg);
+		transform-origin: top;
+	}
+}
+.Card:hover {
+  transform: scale(1.05);
 }
 
 .card-text {
@@ -82,21 +169,25 @@ main {
   flex-direction: column;
   align-items: flex-start;
   
-  font-size: 13px;
+  font-size: 12px;
   justify-content: space-around;
+}
+h2 {
+  font-size: 13px;
 }
 .Card > img {
   max-height: 50%;
   min-height: 50%;
   max-width: 100%;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  background-color: rgb(145, 142, 142);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  /* background-color: rgb(145, 142, 142); */
 }
 .Details {
   margin: auto;
   padding: auto;
-  background: cornflowerblue;
+  /* background-color: var(--lightBackground); */
+  /* background-color: rgb(170, 194, 194); */
   height: 90vh;
   display: flex;
   align-items: center;
@@ -106,34 +197,82 @@ main {
 article {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   width: 70vw;
-  background: chocolate;
+  /* background: chocolate; */
   height: 60vh;
 }
-.img-link {
-  
-   background: chartreuse;
+.imgAndLink {  
+   /* background: chartreuse; */
    width: 50%;
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
+   justify-content: space-around;
    height: 100%;
 }
 .details-img {
     width: 100%;
     max-height: 80%;
 }
+.details-text {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-evenly;
+  height: 80%;
+  width: 45%;
+  /* background-color: cornsilk; */
+}
+
+.details-middle {
+  font-size: 14px;
+} 
+
+.details-middle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* background: cornflowerblue; */
+}
+
 
 
 @media (max-width: 768px) {
   main {
-    gap: 20px;
+    gap: 0px;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
+    padding: 0;
   }
   .Card {
-    width: 80vw;
+    width: 60vw;
+    margin: 0;
+    margin-bottom: 20px;
   }
+ .Details {
+   flex-direction: column;
+ }
+ article {
+   flex-direction: column;
+   /* background: chocolate; */
+   justify-content: space-between;
+   align-items: center;
+   height: 80vh;
+   width: 85vw;
+ }
  
+ .imgAndLink {
+   width: 100%;
+   height: 60%;
+   justify-content: space-around;
+ }
+ .details-text {
+   width: 100%;
+ }
+ .details-middle {
+   /* background: coral; */
+   flex-direction: column;
+   gap: 20px;
+   align-items: flex-start;
+ }
 }
