--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: aqua;
   font-size: 16px;
   color: var(--lightText);
 }
@@ -34,15 +33,7 @@ code {
     monospace;
 }
 
-.spinner {
-  display: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0 ;
-  right: 0;
-  margin: auto;
-  background: crimson;
-}
+
 
 h1, h2, h3, h4, p {
   margin: 0;
@@ -83,10 +74,16 @@ main {
   height: 10vh;
   /* background: white; */
   justify-content: space-between;
+  align-items: center;
   padding: 0 5vw 0 5vw;
   box-shadow: -4px 11px 13px -11px rgba(156, 149, 149, 0.75);
   -webkit-box-shadow: -4px 11px 13px -11px rgba(160, 155, 155, 0.75);
   -moz-box-shadow: -4px 11px 13px -11px rgba(173, 169, 169, 0.75);
+}
+header * {
+  /* background: chartreuse; */
+  margin: 0;
+  padding: 0;
 }
 .filters {
   display: flex;
@@ -99,6 +96,9 @@ main {
 
 .filters * {
   /* background: aqua; */
+  padding-left: 10px;
+  padding-right: 10px;
+  box-sizing: border-box;
   border: none;
   outline: none;
   height: 40px;
@@ -172,16 +172,15 @@ animation: myAnim 1s ease 0s 1 normal forwards;
   font-size: 12px;
   justify-content: space-around;
 }
-h2 {
-  font-size: 13px;
-}
+
+
 .Card > img {
   max-height: 50%;
   min-height: 50%;
   max-width: 100%;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  /* background-color: rgb(145, 142, 142); */
+  background-color: rgb(138, 130, 130);
 }
 .Details {
   margin: auto;
@@ -193,6 +192,9 @@ h2 {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+.Details h2 {
+  font-size: 30px;
 }
 article {
   display: flex;
@@ -234,8 +236,36 @@ article {
   justify-content: space-between;
   /* background: cornflowerblue; */
 }
-
-
+.borderCountries {
+  margin: 5px;
+}
+button {
+  background: none;
+  border: none;
+  border-radius: 5px;
+  padding: 0;
+  padding: 5px 25px;
+  box-shadow: -1px 2px 9px 1px rgba(136, 134, 134, 0.75);
+-webkit-box-shadow: -1px 2px 9px 1px rgba(151, 148, 148, 0.75);
+-moz-box-shadow: -1px 2px 9px 1px rgba(121, 120, 120, 0.75);
+}
+.spinner {
+  display: absolute;
+  top: 20;
+  margin: auto;
+  /* background: green; */
+  /* height:  */
+  box-shadow: none;
+  position: absolute;
+  z-index: 20;
+ color:rgb(138, 130, 130);
+}
+.climbSpinner {
+  background-color: bisque;
+}
+.back {
+  padding: 10px 30px;
+}
 
 @media (max-width: 768px) {
   main {
@@ -274,5 +304,20 @@ article {
    flex-direction: column;
    gap: 20px;
    align-items: flex-start;
+ }
+ .filters {
+   flex-direction: column;
+   height: 100px;
+   margin-bottom: 20px;
+ }
+ .search {
+   width: 80vw;
+   /* height: 500px; */
+ }
+ select {
+   width: 50vw;
+ }
+ .Header {
+   font-size: 10px;
  }
 }
