--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ main {
   justify-content: space-between;
   align-items: center;
   padding: 0 5vw 0 5vw;
+ 
   /* box-shadow: -4px 11px 13px -11px rgba(156, 149, 149, 0.75);
   -webkit-box-shadow: -4px 11px 13px -11px rgba(160, 155, 155, 0.75);
   -moz-box-shadow: -4px 11px 13px -11px rgba(173, 169, 169, 0.75); */
@@ -85,10 +86,21 @@ header * {
   margin: 0;
   padding: 0;
 }
+header div {
+  display: flex;
+  align-items: center;
+  height: 50%;
+}
+header div:hover {
+  cursor: pointer;
+}
+.theme-icon {
+  height: 50%;
+  margin-right: 5px;
+}
 .filters {
   display: flex;
   margin: 20px 0 10px 0;
-  /* background: antiquewhite; */
   justify-content: space-between;
   padding: 0 10vmin 0 10vmin;
   height: 40px;
@@ -116,6 +128,8 @@ header * {
 select {
   width: 15vw;
 }
+
+
 .Card {
   
   display: flex;
